# fujielab-corpus-lhotse

./: README.md  pyproject.toml
experimental/: .gitignore  check_cejc_suw_luw_data.ipynb  run_safia.ipynb  test_cejc_util.ipynb  test_csj.ipynb  test_dataset_cejc.ipynb
experimental/espnetez/: espnetez.ipynb  preprocess.yaml  test_espnetez.py  train.yaml
fujielab/corpus/lhotse_ext/lhotse/recipes/: cejc.py
fujielab/corpus/lhotse_ext/lhotse/recipes/fujielab_local/: cejc_util.py  safia.py
fujielab/corpus/lhotse_local/: build_csj.py
