[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fujielab-corpus-lhotse"
version = "0.1.0"
description = "Fujie Lab corpus tools for Lhotse"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Shinya Fujie", email = "shinya.fujie@p.chibakoudai.jp"},
]
dependencies = [
    "lhotse>=1.0.0",
    "torch>=1.7.0",
    "numpy>=1.18.0",
    "tqdm>=4.45.0",
]

[tool.setuptools.packages.find]
exclude = ["experimental"]
